--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -4,6 +4,7 @@
 @import "infinite.css.less";
 @import "shows.css.less";
 @import "modal.css.less";
+@import "availability.css.less";
 
 body {
   background: @BLACK;
