--- a/app/assets/stylesheets/shows.css.less
+++ b/app/assets/stylesheets/shows.css.less
@@ -122,7 +122,8 @@
   }
 }
 
-.show.page {
+.show.page,
+.weekend.page {
   overflow: hidden !important;
 
   header {
@@ -174,7 +175,9 @@
       }
     }
   }
+}
 
+.show.page {
   .content {
     position: absolute;
     top: 41px;
