--- a/app/assets/stylesheets/availability.css.less
+++ b/app/assets/stylesheets/availability.css.less
@@ -3,6 +3,7 @@
 .weekend {
   .content {
     position: absolute;
+    top: 48px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -12,7 +13,7 @@
 
     .cast {
       margin: 0;
-      padding: 4px 4px 0;
+      padding: 8px 16px 0;
       list-style: none;
 
       li {
