--- a/app/assets/stylesheets/shows.css.less
+++ b/app/assets/stylesheets/shows.css.less
@@ -123,14 +123,15 @@
 }
 
 .show.page,
-.weekend.page {
+.weekend.page,
+.jesters.page {
   overflow: hidden !important;
 
   header {
     position: absolute;
-    top: 0;
-    left: 4px;
-    right: 4px;
+    top: 8px;
+    left: 16px;
+    right: 16px;
     height: 39px;
     border-bottom: 1px solid @BLACK;
     background: @WHITE;
@@ -180,7 +181,7 @@
 .show.page {
   .content {
     position: absolute;
-    top: 40px;
+    top: 48px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -190,7 +191,7 @@
 
     .cast {
       margin: 0;
-      padding: 4px 0 0 4px;
+      padding: 8px 8px 0 16px;
       list-style: none;
 
       li {
@@ -203,7 +204,7 @@
 
         span {
           display: block;
-          margin: 0 4px 4px 0;
+          margin: 0 8px 8px 0;
           font-size: 20px;
           line-height: 32px;
           vertical-align: middle;
@@ -230,7 +231,6 @@
             background-color: @GREEN;
             color: white;
             text-shadow: 0 -1px 0.5px darken(@GREEN, 20%);
-            box-shadow: 0 0 4px fade(@GREEN, 50%);
 
             i {
               background-image: url(/assets/icons-white.png);
