tidy up the design a bit

--- a/app/assets/stylesheets/availability.css.less
+++ b/app/assets/stylesheets/availability.css.less
@@ -46,13 +46,13 @@
           top: 0;
           width: 0;
           height: 0;
-          border-top: 32px solid #ccc;
-          border-right: 32px solid #ccc;
+          border-top: 32px solid @SILVER;
+          border-right: 32px solid @SILVER;
         }
 
         &[data-state=unknown] i {
-          border-top-color: #ccc;
-          border-right-color: #ccc;
+          border-top-color: @SILVER;
+          border-right-color: @SILVER;
         }
 
         &[data-state=friday] i {
