--- a/app/assets/stylesheets/jesters.css.less
+++ b/app/assets/stylesheets/jesters.css.less
@@ -26,7 +26,7 @@
           height: 40px;
           padding: 4px 0 4px 48px;
           position: relative;
-          border-bottom: 1px solid #ccc;
+          border-bottom: 1px solid @FAINT;
           color: @FAINT;
           &.active { color: @BLACK; }
 
