--- a/app/assets/stylesheets/jesters.css.less
+++ b/app/assets/stylesheets/jesters.css.less
@@ -79,6 +79,9 @@
           position: relative;
           border-bottom: 1px solid @FAINT;
           cursor: pointer;
+          transition: top @SLOW ease;
+          -webkit-transition: top @SLOW ease;
+          -moz-transition: top @SLOW ease;
 
           img {
             position: absolute;
