--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -1,4 +1,5 @@
 @import "variables.css.less";
+@import "forms.css.less";
 @import "login.css.less";
 @import "navigation.css.less";
 @import "infinite.css.less";
@@ -114,7 +115,7 @@ button {
       background-position: -96px 0px;
     }
 
-    [rel=edit], [rel=new] {
+    [rel=edit], [rel=new], [rel=ok] {
       left: auto;
       right: 4px;
     }
