add total plays statistic

--- a/app/assets/stylesheets/jesters.css.less
+++ b/app/assets/stylesheets/jesters.css.less
@@ -47,9 +47,7 @@
         }
 
         &.stats {
-          position: absolute;
-          right: 0;
-          bottom: 0;
+          float: right;
           text-align: right;
         }
       }
