--- a/app/assets/stylesheets/forms.css.less
+++ b/app/assets/stylesheets/forms.css.less
@@ -1,16 +1,21 @@
 input[type=text],
-input[type=password] {
+input[type=password],
+input[type=email] {
   display: block;
   margin: 0 0 8px;
   width: 100%;
-  padding: 4px 0;
+  padding: 0;
   text-indent: 4px;
   box-sizing: border-box;
   border: none;
-  line-height: 24px;
+  line-height: 32px;
+  height: 32px;
   vertical-align: middle;
   font-size: 20px;
   border-radius: 0;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 
   &:last-child {
     margin-bottom: 0;
