--- a/app/assets/stylesheets/login.css.less
+++ b/app/assets/stylesheets/login.css.less
@@ -34,36 +34,47 @@
     }
 
     .control-group {
+      position: relative;
       margin: 0 0 16px;
-      background: @WHITE;
-      height: 40px;
-      padding: 0 0 0 40px;
-    }
+      background: white;
+      height: 32px;
+      padding: 0 0 0 32px;
 
-    input, button {
-      display: block;
-      width: 100%;
-      margin: 0;
-      padding: 0;
-      font-size: 24px;
-      line-height: 40px;
-      vertical-align: middle;
-      border: none;
-      box-shadow: none;
-      outline: none;
-      -webkit-appearance: none;
-    }
+      label {
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 32px;
+        height: 32px;
+        background: white url(/assets/icons-black.png) no-repeat -96px -32px;
+        text-indent: -100em;
+        opacity: 0.5;
 
-    input {
-      background: @WHITE;
-      color: @BLACK;
+        &[for=login_password] {
+          background-position: -96px -64px;
+        }
+      }
     }
 
     button {
-      background: @GREEN;
+      display: block;
+      margin: 0;
+      width: 100%;
+      padding: 0;
+      text-indent: 4px;
+      box-sizing: border-box;
+      border: none;
+      line-height: 32px;
+      height: 32px;
+      vertical-align: middle;
+      font-size: 20px;
+      border-radius: 0;
+      outline: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      background: @RED;
       color: white;
-      text-align: center;
-      text-shadow: 0 -1px 0.5px darken(@GREEN, 20%);
     }
 
     [disabled] {
