put in some proper icons

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -115,6 +115,10 @@ button {
       background-position: -96px 0px;
     }
 
+    [rel=new] { background-position: -192px 0px; }
+    [rel=edit] { background-position: -64px -64px; }
+    [rel=ok] { background-position: -160px 0px; }
+
     [rel=edit], [rel=new], [rel=ok] {
       left: auto;
       right: 4px;
