--- a/app/assets/stylesheets/variables.css.less
+++ b/app/assets/stylesheets/variables.css.less
@@ -37,6 +37,8 @@ i.icon-chevron-down  { background-position:  -64px   0px; }
 i.icon-chevron-right { background-position:  -96px   0px; }
 i.icon-cross         { background-position: -128px   0px; }
 i.icon-tick          { background-position: -160px   0px; }
+i.icon-plus          { background-position: -192px   0px; }
+i.icon-minus         { background-position: -224px   0px; }
 i.icon-all           { background-position:    0px -32px; }
 i.icon-unavailable   { background-position:  -32px -32px; }
 i.icon-available     { background-position:  -64px -32px; }
