--- a/app/assets/stylesheets/forms.css.less
+++ b/app/assets/stylesheets/forms.css.less
@@ -22,6 +22,24 @@ input[type=email] {
   }
 }
 
+textarea {
+  display: block;
+  margin: 0 0 8px;
+  width: 100%;
+  padding: 4px;
+  box-sizing: border-box;
+  border: none;
+  vertical-align: middle;
+  border-radius: 0;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
 label.checkbox {
   display: block;
 }
@@ -29,4 +47,20 @@ label.checkbox {
 form p.error {
   margin: 0;
   padding: 0 0 8px;
+}
+
+fieldset {
+  margin: 0 0 8px;
+  background: @SILVER;
+  border: none;
+  padding: 8px;
+  border-radius: 8px;
+
+  [name=password_confirmation] {
+    margin-bottom: 0;
+    +p {
+      margin-top: 8px;
+      padding-bottom: 0;
+    }
+  }
 }
