create/edit/delete awards

--- a/app/assets/stylesheets/forms.css.less
+++ b/app/assets/stylesheets/forms.css.less
@@ -64,3 +64,14 @@ fieldset {
     }
   }
 }
+
+.application button {
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 32px;
+  display: block;
+  margin: 0;
+  padding: 0 8px;
+  background: @GREEN;
+  color: white;
+}
