clearer availability iconography

--- a/app/assets/stylesheets/availability.css.less
+++ b/app/assets/stylesheets/availability.css.less
@@ -1,4 +1,18 @@
-.weekend {
+.weekend.page {
+  header {
+    button {
+      width: auto;
+      padding: 0 8px;
+      font-size: 20px;
+      font-weight: normal;
+      color: @BLACK;
+
+      &.active {
+        color: white;
+      }
+    }
+  }
+
   .content {
     position: absolute;
     top: 48px;
