--- a/app/assets/stylesheets/variables.css.less
+++ b/app/assets/stylesheets/variables.css.less
@@ -47,6 +47,7 @@ i.icon-mc            { background-position: -128px -32px; }
 i.icon-muso          { background-position: -160px -32px; }
 i.icon-notes         { background-position: -192px -32px; }
 i.icon-guest         { background-position: -224px -32px; }
+i.icon-inactive      { background-position: -256px -32px; }
 i.icon-orientation   { background-position:    0px -64px; }
 i.icon-back          { background-position:  -32px -64px; }
 i.icon-edit          { background-position:  -64px -64px; }
