show "last played" information when casting

--- a/app/assets/stylesheets/shows.css.less
+++ b/app/assets/stylesheets/shows.css.less
@@ -198,7 +198,7 @@
         &.selected {
           span {
             background-color: @GREEN;
-            color: white;
+            color: white !important;
             text-shadow: 0 -1px 0.5px darken(@GREEN, 20%);
 
             i {
@@ -267,6 +267,7 @@
   .cast li[data-role=muso],
   .cast li[data-role=notes] {
     display: block;
+    color: @BLACK !important;
   }
 }
 
