--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -7,6 +7,7 @@
 @import "modal.css.less";
 @import "availability.css.less";
 @import "jesters.css.less";
+@import "musos.css.less";
 @import "awards.css.less";
 
 body {
