--- a/app/assets/stylesheets/shows.css.less
+++ b/app/assets/stylesheets/shows.css.less
@@ -20,25 +20,26 @@
       height: 72px;
       text-decoration: none;
 
-      .w, .d {
+      .d {
         font-size: 44px;
+        line-height: 50px;
         position: absolute;
-        top: 8px;
-        line-height: 56px;
+        top: 0;
+        left: 0;
+        right: 0;
+        text-align: center;
         vertical-align: middle;
       }
 
       .w {
+        position: absolute;
+        top: 50px;
         left: 0;
-        opacity: 0.25;
-        color: @BLUE;
-      }
-
-      .d {
-        right: 8px;
-        font-weight: bold;
-        opacity: 0.5;
-        color: @RED;
+        right: 0;
+        text-align: center;
+        vertical-align: middle;
+        text-transform: uppercase;
+        letter-spacing: 0.2em;
       }
     }
 
