--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -87,7 +87,9 @@ button {
       height: 32px;
       border-radius: 4px;
       text-decoration: none;
-      background: rgba(0, 0, 0, 0.2) url(/assets/icons-white.png) no-repeat 32px 32px;
+      background-color: rgba(0, 0, 0, 0.2);
+      .retina-icons('white');
+      background-position: 32px 32px;
       color: @WHITE;
       font-weight: bold;
       font-size: 24px;
