--- a/app/assets/stylesheets/login.css.less
+++ b/app/assets/stylesheets/login.css.less
@@ -47,7 +47,8 @@
         top: 0;
         width: 32px;
         height: 32px;
-        background: white url(/assets/icons-black.png) no-repeat -96px -32px;
+        background-color: white;
+        .retina-image('/assets/icons-black', 'png', no-repeat, @ICON_W, @ICON_H, -96px, -32px);
         text-indent: -100em;
         opacity: 0.5;
 
