--- a/app/assets/stylesheets/awards.css.less
+++ b/app/assets/stylesheets/awards.css.less
@@ -54,7 +54,7 @@
           top: 0;
           width: 32px;
           height: 32px;
-          background-image: url(/assets/icons-black.png);
+          .retina-icons('black');
         }
 
         b {
