display notes as markdown

--- a/app/assets/stylesheets/shows.css.less
+++ b/app/assets/stylesheets/shows.css.less
@@ -310,7 +310,21 @@
         background: white;
         padding: 8px;
         margin-bottom: 8px;
-        white-space: pre;
+        
+        p {
+          margin: 0 0 8px;
+        }
+        
+        ul {
+          margin: 0 0 8px;
+          list-style: square;
+          
+          li {
+            margin: 0;
+            padding: 0;
+            display: list-item;
+          }
+        }
 
         &:after {
           content: '';
