--- a/app/assets/stylesheets/jesters.css.less
+++ b/app/assets/stylesheets/jesters.css.less
@@ -223,6 +223,14 @@
         }
       }
     }
+    
+    .button {
+      margin-right: 16px;
+      
+      &+.button {
+        margin-top: 8px;
+      }
+    }
   }
 }
 
